Add 'links' page links

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -53,6 +53,11 @@ layout: master
 								<a href="{{ site.baseurl }}{{ layout }}">Layout</a>
 							</li>
 
+							{% capture links %}{% link foundations/links.md %}{% endcapture %}
+							<li class="stacked-nav__item stacked-nav__item--level-2 {% if page.url contains links %}stacked-nav__item--active{% endif %}">
+								<a href="{{ site.baseurl }}{{ links }}">Links</a>
+							</li>
+
 							{% capture typography %}{% link foundations/typography.md %}{% endcapture %}
 							<li class="stacked-nav__item stacked-nav__item--level-2 {% if page.url contains typography %}stacked-nav__item--active{% endif %}">
 								<a href="{{ site.baseurl }}{{ typography }}">Typography</a>
