Add active state for links

--- a/src/stylesheets/typography/_typography-global.scss
+++ b/src/stylesheets/typography/_typography-global.scss
@@ -61,6 +61,10 @@ a {
     @include default-focus-style;
     background-color: $colour-focus;
   }
+
+  &:active {
+    color: $colour-link-active;
+  }
 }
 
 p,
