Remove margin from tophat to sit flush with site

--- a/css/app.scss
+++ b/css/app.scss
@@ -18,3 +18,7 @@ $nice-font-base-path: '/NICE-Experience/fonts/';
 // Components
 @import 'components/components';
 
+
+.nice-tophat {
+	margin-bottom: 0 !important;
+}
