--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -2,7 +2,12 @@
 layout: master
 ---
 
+{% include alpha.html %}
+
+{% include breadcrumbs.html %}
+
 <div class="container">
+
 	<div class="page {% if page.inpagenav == false %}page--full{% endif %}">
 
 		<aside class="page__sidebar" role="complementary">
