--- a/_includes/example.html
+++ b/_includes/example.html
@@ -5,6 +5,10 @@
 	</div>
 	<div class="example__code">
 		<h4 class="example__label">Source</h4>
-		<pre><code {% if include.lang %}class="language-{{ include.lang }}"{% endif %}>{{ include.body | xml_escape }}</code></pre>
+<div markdown="1">
+``` {{ include.lang | default: 'html' }}
+{{ include.body }}
+```
+</div>
 	</div>
 </div>
