--- a/_sass/components/_components-example.scss
+++ b/_sass/components/_components-example.scss
@@ -1,35 +1,35 @@
 .example {
-  border: 1px solid #ddd;
-  margin: 16px 0;
+  border: 1px solid $colour-border;
+  margin: em($spacing-medium 0 $spacing-large);
 
   &--full pre {
     max-height: auto;
   }
 
   &__label {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    color: #333;
-    font-size: 10px;
+    background: #fff;
+    border-bottom: 1px solid $colour-border;
+    border-right: 1px solid $colour-border;
+    color: $colour-text;
+    font-size: rem(10px);
     font-weight: bold;
     left: 0;
     line-height: 1;
     margin: 0;
-    padding: 4px;
+    padding: em($spacing-x-small);
     position: absolute;
     text-transform: uppercase;
     top: 0;
 
     &--dark {
-      background-color: #f7f7f9;
+      background-color: $colour-panel-light;
     }
   }
 
   &__body {
-    border-bottom: 1px solid #e1e1e8;
+    border-bottom: 1px solid $colour-nice-grey-2;
     margin: 0;
-    padding: 20px 8px 8px;
+    padding: em($spacing-medium $spacing-small $spacing-small);
     position: relative;
   }
 
@@ -49,7 +49,7 @@
       }
 
       code {
-        padding-top: em(24);
+        padding-top: em($spacing-medium);
       }
     }
   }
