--- a/src/stylesheets/components/_components-panel.scss
+++ b/src/stylesheets/components/_components-panel.scss
@@ -7,10 +7,19 @@
 /// @since 0.1.0
 .panel {
   background: $colour-panel-light;
-  padding: 1em;
+  margin: em($spacing-medium 0 $spacing-large);
+  padding: em($spacing-medium);
 
   &--dark {
     background: $colour-panel-dark;
     color: $colour-text-reverse;
+  }
+
+  :first-child {
+    margin-top: 0;
+  }
+
+  :last-child {
+    margin-bottom: 0;
   }
 }
