--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -7,6 +7,7 @@
 		<li><a href="/components/tabs/">Tabs</a></li>
 		<li><a href="/components/quote/">Quote</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
+		<li><a href="/components/typography/">Typography</a></li>
 	</ul>
 
 {% endblock %}
