Update to 0.2.10 and integrate changes

--- a/_includes/example.html
+++ b/_includes/example.html
@@ -1,6 +1,6 @@
 <div class="example">
 	<div class="example__body">
-		<h4 class="example__label example__label--dark">{{ include.title | default: 'Example' }}</h4>
+		<h4 class="example__label example__label--inverse">{{ include.title | default: 'Example' }}</h4>
 		{{ include.body }}
 	</div>
 	<div class="example__code">
