--- a/_sass/components/_components-example.scss
+++ b/_sass/components/_components-example.scss
@@ -21,8 +21,8 @@
     text-transform: uppercase;
     top: 0;
 
-    &--dark {
-      background-color: $colour-panel-light;
+    &--inverse {
+      background-color: $colour-panel-default;
     }
   }
 
