Add buttons example page

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -4,6 +4,7 @@
 {% block body %}
 
 	<ul>
+		<li><a href="/components/buttons/">Buttons</a></li>
 		<li><a href="/components/tabs/">Tabs</a></li>
 		<li><a href="/components/quote/">Quote</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
