Add phase banner example page

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -10,6 +10,7 @@
 		<li><a href="/components/quote/">Quote</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
 		<li><a href="/components/panels/">Panels</a></li>
+		<li><a href="/components/phase/">Phase banners</a></li>
 		<li><a href="/components/typography/">Typography</a></li>
 	</ul>
 
