--- a/src/stylesheets/typography/_typography-global.scss
+++ b/src/stylesheets/typography/_typography-global.scss
@@ -60,6 +60,7 @@ a {
   &:focus {
     @include default-focus-style;
     background-color: $colour-focus;
+    color: $colour-link-focus-text;
   }
 
   &:active {
