Add compact and loose grid gutters

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -6,11 +6,12 @@
 	<ul>
 		<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 		<li><a href="/components/buttons/">Buttons</a></li>
-		<li><a href="/components/tabs/">Tabs</a></li>
-		<li><a href="/components/quote/">Quote</a></li>
+		<li><a href="/components/grid/">Grid</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
 		<li><a href="/components/panels/">Panels</a></li>
 		<li><a href="/components/phase/">Phase banners</a></li>
+		<li><a href="/components/quote/">Quote</a></li>
+		<li><a href="/components/tabs/">Tabs</a></li>
 		<li><a href="/components/typography/">Typography</a></li>
 	</ul>
 
