Improve hero component

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -7,6 +7,7 @@
 		<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 		<li><a href="/components/buttons/">Buttons</a></li>
 		<li><a href="/components/grid/">Grid</a></li>
+		<li><a href="/components/hero/">Hero</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
 		<li><a href="/components/panels/">Panels</a></li>
 		<li><a href="/components/phase/">Phase banners</a></li>
