--- a/src/stylesheets/components/_components.scss
+++ b/src/stylesheets/components/_components.scss
@@ -1,7 +1,6 @@
 @import 'components-breadcrumbs',
 'components-buttons',
 'components-global',
-'components-hero',
 'components-maintain-ratio',
 'components-navbar',
 'components-nav',
@@ -10,5 +9,6 @@
 'components-tables';
 
 @import '../components/footer/footer',
+'../components/hero/hero',
 '../components/phase-banner/phase-banner',
 '../components/tabs/tabs';
