--- a/_sass/components/_components-grid-example.scss
+++ b/_sass/components/_components-grid-example.scss
@@ -1,7 +1,7 @@
 .grid-example-item {
   background: get-colour(grey, x-light);
   border: 5px solid $colour-border;
-  margin-bottom: .5em;
-  padding: .5em;
+  margin-bottom: em($spacing-small);
+  padding: em($spacing-small);
   text-align: center;
 }
