Add rel of noopener of links to support PWAs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer" role="contentinfo">
 	<div class="container">
 
-		<a class="site-footer__logo" href="http://www.nice.org.uk/">
+		<a class="site-footer__logo" href="http://www.nice.org.uk/" rel="noopener external">
 			<span class="visually-hidden">NICE</span>
 			<i class="icon icon--logo" aria-hidden="true"></i>
 		</a>
@@ -10,25 +10,25 @@
 			<nav class="services">
 				<ul class="services__list" role="navigation">
 					<li class="services__item">
-						<a href="http://pathways.nice.org.uk">
+						<a href="http://pathways.nice.org.uk" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--pathways"></span>
 							NICE Pathways
 						</a>
 					</li>
 					<li class="services__item">
-						<a href="http://www.nice.org.uk/guidance">
+						<a href="http://www.nice.org.uk/guidance" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--guidance"></span>
 							Guidance
 						</a>
 					</li>
 					<li class="services__item">
-						<a href="http://www.nice.org.uk/standards-and-indicators">
+						<a href="http://www.nice.org.uk/standards-and-indicators" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--standards"></span>
 							Standards &amp; Indicators
 						</a>
 					</li>
 					<li class="services__item">
-						<a href="http://www.evidence.nhs.uk">
+						<a href="http://www.evidence.nhs.uk" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--evidence"></span>
 							Evidence services
 						</a>
@@ -44,25 +44,25 @@
 				</h2>
 				<ul class="social-networks__list">
 					<li class="social-networks__item">
-						<a class="social-networks__network" target="_blank" title="Follow NICE on Twitter" href="https://twitter.com/nicecomms">
+						<a class="social-networks__network" target="_blank" title="Follow NICE on Twitter" href="https://twitter.com/nicecomms" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--twitter-square"></span>
 							<span class="visually-hidden">Follow NICE on Twitter</span>
 						</a>
 					</li>
 					<li class="social-networks__item">
-						<a target="_blank" title="Follow NICE on YouTube" href="https://www.youtube.com/c/niceorguk">
+						<a target="_blank" title="Follow NICE on YouTube" href="https://www.youtube.com/c/niceorguk" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--youtube-square"></span>
 							<span class="visually-hidden">Follow NICE on YouTube</span>
 						</a>
 					</li>
 					<li class="social-networks__item">
-						<a target="_blank" title="Follow NICE on LinkedIn" href="https://www.linkedin.com/company-beta/788975/">
+						<a target="_blank" title="Follow NICE on LinkedIn" href="https://www.linkedin.com/company-beta/788975/" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--linkedin-square"></span>
 							<span class="visually-hidden">Follow NICE on LinkedIn</span>
 						</a>
 					</li>
 					<li class="social-networks__item">
-						<a target="_blank" title="Follow NICE on Facebook" href="https://www.facebook.com/NationalInstituteforHealthandCareExcellence/">
+						<a target="_blank" title="Follow NICE on Facebook" href="https://www.facebook.com/NationalInstituteforHealthandCareExcellence/" rel="noopener external">
 							<span aria-hidden="true" class="icon icon--facebook-square"></span>
 							<span class="visually-hidden">Follow NICE on Facebook</span>
 						</a>
@@ -98,7 +98,7 @@
 
 		<p class="site-footer__copyright">
 			Copyright &copy; {{ site.time | date: '%Y' }} National Institute for Health and Care Excellence. All rights reserved.
-			&ndash; <a href="http://www.nice.org.uk" rel="provider">Provided by NICE</a>
+			&ndash; <a href="http://www.nice.org.uk" rel="noopener external provider">Provided by NICE</a>
 		</p>
 
 	</div>
