Update spacing page

--- a/_sass/components/_components.scss
+++ b/_sass/components/_components.scss
@@ -3,5 +3,6 @@
 'components-colour-grid',
 'components-in-page-nav',
 'components-grid-example',
+'components-spacing-block',
 'components-stacked-nav',
 'components-layout';
