Add background to stacked navigation

--- a/_sass/components/_components-stacked-nav.scss
+++ b/_sass/components/_components-stacked-nav.scss
@@ -5,6 +5,7 @@
 /// Stacked navigational structure
 .stacked-nav {
   @include font-size(-1);
+  background: $colour-panel-default;
   list-style: none;
   margin: 0;
   padding: 0;
