Add meta description to all pages

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -8,10 +8,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="description" content="{{ description }}">
+	<meta name="description" content="{{ page.description | default: description }}">
 	<meta property="og:title" content="{{ title }}">
 	<meta property="og:type" content="{{ type }}">
-	<meta property="og:description" content="{{ description }}">
+	<meta property="og:description" content="{{ page.description | default: description }}">
 	<meta name="theme-color" content="#004650">
 
 	<title>{{ title }} | NICE Experience</title>
