--- a/_includes/menu-item.html
+++ b/_includes/menu-item.html
@@ -1,3 +1,10 @@
+{% comment %}
+	Renders a grid menu item, given a reference to a page.
+	Example usage:
+		{% assign libs = site.pages | where: "path", "technical/sass/libraries.md" | first %}
+    	{% include menu-item.html page=libs %}
+{% endcomment %}
+
 <div data-g="12 xs:6 sm:4 md:3">
 	<h4><a href="{{ include.page.url | relative_url }}">{{ include.page.title }}</a></h4>
 	<p>
