Add option for section heading

--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -9,6 +9,10 @@
 {% capture indexUrl %}/{{ pageGroup.name }}/{% endcapture %}
 {% assign index = pageGroup.items | where_exp: "pg","pg.url == indexUrl" | first %}
 
+{% if include.heading %}
+## [{{ index.title }}]({{ index.url | relative_url }})
+{% endif %}
+
 {% if include.lead %}
 {{ index.description }}
 {:.lead}
