Add in page navigation component

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -8,6 +8,7 @@
 		<li><a href="/components/buttons/">Buttons</a></li>
 		<li><a href="/components/grid/">Grid</a></li>
 		<li><a href="/components/hero/">Hero</a></li>
+		<li><a href="/components/in-page-nav/">In page nav</a></li>
 		<li><a href="/components/lists/">Lists</a></li>
 		<li><a href="/components/panels/">Panels</a></li>
 		<li><a href="/components/phase/">Phase banners</a></li>
