Align left hand side of lists with column edge

--- a/server/views/components/lists.njk
+++ b/server/views/components/lists.njk
@@ -19,7 +19,12 @@
 		<ul>
 			<li>Top level
 				<ul>
-					<li>Second level</li>
+					<li>Second level
+						<ul>
+							<li>Third level</li>
+							<li>Third level</li>
+						</ul>
+					</li>
 					<li>Second level</li>
 				</ul>
 			</li>
