Fix lint issues

--- a/src/stylesheets/settings/_settings-colours-semantic.scss
+++ b/src/stylesheets/settings/_settings-colours-semantic.scss
@@ -31,7 +31,7 @@ $colour-text-inverse: $colour-nice-white;
 
 /// Focus colour
 /// @since 0.2.0
-$colour-focus: #0092A6;
+$colour-focus: #0092a6;
 
 /// Icons colour
 /// @since 0.2.0
