Add footer preview page

--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -6,6 +6,7 @@
 	<ul>
 		<li><a href="/components/breadcrumbs/">Breadcrumbs</a></li>
 		<li><a href="/components/buttons/">Buttons</a></li>
+		<li><a href="/components/footer/">Footer</a></li>
 		<li><a href="/components/grid/">Grid</a></li>
 		<li><a href="/components/hero/">Hero</a></li>
 		<li><a href="/components/in-page-nav/">In page nav</a></li>
